# Agentic-AI-for-Intelligent-Talent-Acquisition-Candidate-Screening

./: .gitignore  README.md  interview_test.html  pyproject.toml
agents/: __init__.py
agents/bias_detection_agent/: __init__.py  agent.py  prompts.py
agents/extraction_agent/: __init__.py  agent.py  prompts.py  tools.py
agents/final_report_agent/: __init__.py  agent.py
agents/gmail_agent/: agent.py  config.py  gmail_agent.py
agents/interview_agent/: __init__.py  agent.py  prompts.py
agents/orchestrator/: agent.py  prompts.py
agents/screening_agent/: __init__.py  agent.py  prompts.py
agents/voice_agent/: __init__.py  agent.py  config.py  interview_agent.py  interview_prompts.py
app/: database.py  main.py
app/models/: schemas.py  tables.py
app/routes/: auth.py  frontend.py  interview.py  upload.py  voice_interview.py
app/services/: extractor.py
frontend/: app.js  index.html  styles.css
